--- a/index.html
+++ b/index.html
@@ -52,8 +52,17 @@
         <p>
           I'm a passionate frontend developer with a focus on creating modern, responsive, and user-friendly websites.
         </p>
+
         <p>
           <strong>Skills:</strong> HTML, CSS, JavaScript, React, UI/UX Design
+        </p>
+      
+        <p>
+          I’m constantly exploring new ways to optimize performance and improve code efficiency. Whether it’s implementing smooth animations, creating reusable UI components, or fine-tuning website responsiveness, I focus on making the web both beautiful and functional.
+        </p>
+      
+        <p>
+          Outside coding, I enjoy experimenting with new CSS techniques, learning JavaScript frameworks, and analyzing how small design choices can dramatically improve the overall user experience.
         </p>
       </div>
     </div>
@@ -366,3 +375,4 @@
 
 </body>
 </html>
+
